--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @theme{
@@ -39,6 +40,23 @@
   background-color: #F59E0B;
   color: white;
   border: none;
+}
+
+.list-card{
+  position: relative;
+  overflow: hidden;
+
+}
+
+.slide-container{
+  position: absolute;
+  bottom: 0;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.list-card:hover .slide-container{
+  transform: translateY(0);
 }
 }
 
