implement group facility

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,34 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
+::-webkit-scrollbar {
+  width: 80px;                /* Width of the scrollbar */
+}
+
+/* Scrollbar Track */
+::-webkit-scrollbar-track {
+  background: transparent;       /* Background of the scrollbar track */
+  border-radius: 10px;
+}
+
+/* Scrollbar Thumb */
+::-webkit-scrollbar-thumb {
+  background: #888;          /* Color of the draggable thumb */
+  border-radius: 10px;
+}
+
+/* Thumb Hover Effect */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;          /* Darker color on hover */
+}
+
+*{
+  scrollbar-width: thin;
+  scrollbar-color: #f6f6f7 #f1f1f1;
+}
+
+
 @theme{
   --color-primary:#16A34A;
   --color-accent:#F59E0B;
@@ -86,3 +114,4 @@ body{
     opacity: 1;
   }
 }
+
