--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,6 +99,12 @@
 .list-card:hover .slide-container{
   transform: translateY(0);
 }
+
+@media screen and (max-width:1280px) {
+  .slide-container{
+    transform: translateY(0);
+  }
+}
 }
 
 *{
